--- a/about_me.html
+++ b/about_me.html
@@ -39,6 +39,7 @@
         width="150"
         align="left"
         style="margin-right: 15px"
+        alt="Pastrami Sandwich"
       />
       <p>
         My favorite dish at
@@ -63,13 +64,19 @@
     >
       <tr>
         <th>Name</th>
-        <th>Image</th>
+        <th>Cover</th>
         <th>Author</th>
         <th>Introduction</th>
       </tr>
       <tr>
         <td>Fairy Tale</td>
-        <td><img src="images/fairy_tale.jpg" width="100" /></td>
+        <td>
+          <img
+            src="images/fairy_tale.jpg"
+            alt="Cover of Fairy tale"
+            width="100"
+          />
+        </td>
         <td>Stephen King</td>
         <td>
           Spellbinding novel about a young man who inherits the keys to a
@@ -79,7 +86,13 @@
       </tr>
       <tr>
         <td>To Kill a Mockingbird</td>
-        <td><img src="images/mockingbird.jpg" width="100" /></td>
+        <td>
+          <img
+            src="images/mockingbird.jpg"
+            alt="Cover of To Kill a Mockingbird"
+            width="100"
+          />
+        </td>
         <td>Harper Lee</td>
         <td>
           Harper Lee's Pulitzer Prize-winning masterwork of honor and injustice
@@ -89,7 +102,7 @@
       </tr>
       <tr>
         <td>1984</td>
-        <td><img src="images/1984.jpg" width="100" /></td>
+        <td><img src="images/1984.jpg" alt="Cover of 1984" width="100" /></td>
         <td>George Orwell</td>
         <td>
           A startling and haunting vision of the world, 1984 is so powerful that
@@ -101,7 +114,9 @@
       </tr>
       <tr>
         <td>The Hobbit</td>
-        <td><img src="images/hobbit.jpg" width="100" /></td>
+        <td>
+          <img src="images/hobbit.jpg" alt="Cover of the Hobbit" width="100" />
+        </td>
         <td>J.R.R. Tolkien</td>
         <td>
           Bilbo Baggins is a hobbit who enjoys a comfortable, unambitious life,
